src/main/java/org/example/error/enums/ErrorType.java
package org.example.error.enums;

public enum ErrorType {

	// lexical
	UNDEFINED_TOKEN,
	NUMERIC_LIMIT_EXCEEDED,
	TEXT_LENGTH_EXCEEDED,
	IDENTIFIER_LENGTH_EXCEEDED,
	COMMENT_LENGTH_EXCEEDED,
	END_OF_FILE_REACHED,

	// syntactic
	END_OF_FILE_NOT_PRESENT,
	OPENING_PARENTHESIS_MISSING,
	CLOSING_PARENTHESIS_MISSING,
	CLOSING_BRACKET_MISSING,
	FUNCTION_BODY_MISSING,
	FUNCTION_NAME_NOT_UNIQUE,
	CLASS_NAME_MISSING,
	CLASS_BODY_MISSING,
	CLASS_NAME_NOT_UNIQUE,
	METHOD_NAME_NOT_UNIQUE,
	SEMICOLON_MISSING,
	ASSIGNMENT_MISSING_EXPRESSION,
	IDENTIFIER_EXPECTED,
	CONDITION_MISSING,
	CONDITIONAL_STATEMENT_BODY_MISSING,
	ITERATOR_MISSING,
	IN_KEYWORD_MISSING,
	LOOP_RANGE_MISSING,
	RETURN_MISSING_EXPRESSION

	// semantic
}
